# abstract-lang

./: .gitignore  CMakeLists.txt  README.md  config.h  main.cpp
abstract/: includes.h  main.cpp  main.h
src/: main.c
src/abstract/core/: config.h  lexer.c  lexer.h
src/abstract/core/lexer/: state.c  state.h  token.h  tokenizer.c  tokenizer.h
src/abstract/utils/: defs.h  includes.h
